--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -38,6 +38,14 @@
               {{ if .Site.DisqusShortname }}
                 {{ partial "post/disqus.html" . }}
               {{ end }}
+
+            <script src="https://utteranc.es/client.js"
+              repo="luoxiu/comments"
+              issue-term="pathname"
+              theme="github-light"
+              crossorigin="anonymous"
+              async>
+            </script>
             {{ end }}
           </div>
         </article>
